Register partner feature
