# src/main/java/com/becommerce/controller/RegisterController.java
@@ -1,9 +1,9 @@
 package com.becommerce.controller;
 
 import com.becommerce.api.RegisterApi;
-import com.becommerce.model.RegisterCustomerRequest;
-import com.becommerce.model.RegisterPartnerRequest;
-import com.becommerce.model.RegisterProductRequest;
+import com.becommerce.model.ProductSchema;
+import com.becommerce.model.RegisterPartnerSchema;
+import com.becommerce.model.RegisterUserSchema;
 import com.becommerce.service.RegisterService;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
@@ -12,23 +12,24 @@ import javax.inject.Inject;
 
 @Controller
 public class RegisterController implements RegisterApi {
-    
+
     @Inject
     RegisterService registerService;
-    
+
     @Override
-    public HttpResponse<Void> registerPartner(RegisterPartnerRequest registerPartnerRequest) {
+    public HttpResponse<Void> registerPartner(String xApiToken, RegisterPartnerSchema registerPartnerSchema) {
+        registerService.registerPartner(registerPartnerSchema, xApiToken);
+        return HttpResponse.ok();
+    }
+
+    @Override
+    public HttpResponse<Void> registerProduct(String X_API_TOKEN, ProductSchema registerProductRequest) {
         return HttpResponse.noContent();
     }
 
     @Override
-    public HttpResponse<Void> registerProduct(String X_API_TOKEN, RegisterProductRequest registerProductRequest) {
-        return HttpResponse.noContent();
-    }
-
-    @Override
-    public HttpResponse<Void> registerCustomer(RegisterCustomerRequest registerCustomerRequest) {
-        registerService.registerCustomer(registerCustomerRequest);
+    public HttpResponse<Void> registerUser(RegisterUserSchema registerUserSchema) {
+        registerService.registerUser(registerUserSchema);
         return HttpResponse.ok();
     }
 }
