# src/main/java/com/becommerce/controller/SessionController.java
@@ -1,8 +1,8 @@
 package com.becommerce.controller;
 
 import com.becommerce.api.SessionApi;
-import com.becommerce.model.AuthenticationRequest;
-import com.becommerce.model.SessionResponse;
+import com.becommerce.model.AuthenticationSchema;
+import com.becommerce.model.SessionSchema;
 import com.becommerce.service.AuthenticateUserService;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
@@ -13,12 +13,13 @@ import javax.inject.Inject;
 public class SessionController implements SessionApi {
     @Inject
     private AuthenticateUserService authenticateUserService;
+
     @Override
-    public HttpResponse<SessionResponse> authenticate(AuthenticationRequest authenticationRequest) {
+    public HttpResponse<SessionSchema> authenticate(AuthenticationSchema authenticationSchema) {
         return HttpResponse.ok(authenticateUserService
                 .authenticate(
-                        authenticationRequest.getEmail(),
-                        authenticationRequest.getPassword()
+                        authenticationSchema.getEmail(),
+                        authenticationSchema.getPassword()
                 )
         );
     }
