# src/main/java/com/becommerce/model/PartnerModel.java
@@ -3,11 +3,11 @@ package com.becommerce.model;
 import com.becommerce.model.enums.CustomerType;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.*;
-import org.hibernate.annotations.GenericGenerator;
-import org.hibernate.annotations.ManyToAny;
-import org.hibernate.annotations.Type;
+import org.hibernate.annotations.*;
 
 import javax.persistence.*;
+import javax.persistence.Entity;
+import javax.persistence.Table;
 import javax.validation.constraints.NotNull;
 import java.io.Serializable;
 import java.time.LocalDateTime;
@@ -28,48 +28,49 @@ public class PartnerModel implements Serializable {
     private UUID id;
 
     @NotNull
-    @Column(name = "name", nullable = false, unique = true)
-    private String name;
-    @NotNull
-    @Column(name = "password", nullable = false)
-    private String password;
-    @NotNull
-    @Column(name = "email", nullable = false, unique = true)
-    private String email;
-    @NotNull
     @Column(name = "cnpj", unique = true)
     private String cnpj = "";
+
     @NotNull
     @Column(name = "description")
     private String description = "";
+
     @NotNull
     @Column(name = "location")
     private String location = "";
+
     @NotNull
     @Column(name = "avaliation")
     private Double avaliation;
+
     @NotNull
     @Column(name = "icon")
     private String icon = "";
+
+    @Column(name = "background_image")
+    private String backgroundImage = "";
+
     @NotNull
     @Column(name = "created_at", nullable = false)
     private LocalDateTime createdAt;
+
     @NotNull
     @Column(name = "updated_at", nullable = false)
     private LocalDateTime updatedAt;
 
-    @JsonIgnore
-    @OneToMany(mappedBy = "partner")
-    private Set<TokenModel> tokens = new HashSet<>();
-
-    @JsonIgnore
-    @OneToMany(mappedBy = "partner")
-    private Set<ProductModel> products = new HashSet<>();
-
-    @JsonIgnore
-    @OneToMany(mappedBy = "partner")
-    private Set<OrderModel> orders = new HashSet<>();
-
     @OneToOne
-    private AddressModel address;
+    private UserModel user;
+
+    @ManyToMany(mappedBy = "partners")
+    @NotFound(action=NotFoundAction.IGNORE)
+    private List<CategoryModel> categories = new ArrayList<>();
+
+    @ManyToOne
+    @NotFound(action=NotFoundAction.IGNORE)
+    private SaleModel sale;
+
+    @JsonIgnore
+    @OneToMany(mappedBy = "partner")
+    @NotFound(action= NotFoundAction.IGNORE)
+    private List<ProductModel> products = new ArrayList<>();
 }
