# src/main/java/com/becommerce/model/UserModel.java
@@ -6,6 +6,8 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.hibernate.annotations.GenericGenerator;
+import org.hibernate.annotations.NotFound;
+import org.hibernate.annotations.NotFoundAction;
 import org.hibernate.annotations.Type;
 
 import javax.persistence.*;
@@ -14,12 +16,12 @@ import java.time.LocalDateTime;
 import java.util.*;
 
 @Entity
-@Builder
-@Table(name = "tb_category")
+@Table(name = "tb_user")
+@Data
 @AllArgsConstructor
 @NoArgsConstructor
-@Data
-public class CategoryModel {
+@Builder
+public class UserModel {
     @Id
     @Type(type = "pg-uuid")
     @Column(updatable = false, nullable = false, columnDefinition = "uuid DEFAULT uuid_generate_v4()")
@@ -28,8 +30,20 @@ public class CategoryModel {
     private UUID id;
 
     @NotNull
-    @Column(name = "name", nullable = false, unique = true)
+    @Column(name = "name", nullable = false)
     private String name;
+
+    @NotNull
+    @Column(name = "password", nullable = false)
+    private String password;
+
+    @NotNull
+    @Column(name = "type", nullable = false)
+    private String type;
+
+    @NotNull
+    @Column(name = "email", nullable = false, unique = true)
+    private String email;
 
     @NotNull
     @Column(name = "created_at", nullable = false)
@@ -39,15 +53,24 @@ public class CategoryModel {
     @Column(name = "updated_at", nullable = false)
     private LocalDateTime updatedAt;
 
-    @JsonIgnore
-    @ManyToMany
-    @JoinTable(
-            name = "category_partner",
-            joinColumns = @JoinColumn(name = "category_id"),
-            inverseJoinColumns = @JoinColumn(name = "partner_id"))
-    private List<PartnerModel> partners = new ArrayList<>();
+    @OneToOne(cascade = CascadeType.ALL)
+    @NotFound(action = NotFoundAction.IGNORE)
+    private AddressModel address;
+
+    @OneToOne
+    @NotFound(action = NotFoundAction.IGNORE)
+    private PartnerModel partner;
+
+    @ManyToOne
+    @NotFound(action = NotFoundAction.IGNORE)
+    private SaleModel sale;
 
     @JsonIgnore
-    @OneToMany(mappedBy = "category")
-    private List<ProductModel> products = new ArrayList<>();
+    @OneToMany(mappedBy = "user")
+    private List<OrderModel> orders = new ArrayList<>();
+
+    @JsonIgnore
+    @OneToMany(mappedBy = "user")
+    private List<TokenModel> tokens = new ArrayList<>();
+
 }
